# poker-trainer-pwa

./: .gitignore  README.md  wrangler.jsonc
engine/: Cargo.toml
engine/data/: preflop_charts.json  solved_strategies.json
engine/src/: charts.rs  equity.rs  lib.rs  model.rs  solver.rs  wasm.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.tsx  engine.ts  index.css  main.tsx  preflop-policy.ts
web/src/components/: AboutFooter.tsx  DrillScreen.tsx  Header.tsx
web/src/data/: preflop_charts.json
web/src/wasm/: .gitignore  package.json  poker_trainer_engine.d.ts  poker_trainer_engine.js  poker_trainer_engine_bg.wasm  poker_trainer_engine_bg.wasm.d.ts
