[package]
name = "poker-trainer-engine"
version = "0.1.0"
edition = "2021"
description = "Preflop GTO trainer engine, ported from the Rust desktop version, exposed to JS via wasm-bindgen"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
