[package]
name = "poker-trainer-engine"
version = "0.1.0"
edition = "2021"
description = "Preflop GTO trainer engine, ported from the Rust desktop version, exposed to JS via wasm-bindgen"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "precompute"
path = "src/bin/precompute.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
